# industrial-historian

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  historian.sh  project-context.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/cis/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: ci.yml
config/: default.toml
crates/historian-core/: Cargo.toml  build.rs
docs/: ADD-MODBUS-INGESTOR.md  DOCKER-MANAGEMENT.md  FIX-ADDRESS-ZERO-VALIDATION.md  LEGACY-CONFIG-CLEANUP.md  MODBUS-INGESTOR-REFACTOR.md  PGADMIN-GUIDE.md  POSTGRESQL-UNIFIED.md  PROGRESS-STATUS.md  PROTOTYPE-COMPLETE.md  QUICKSTART.md  WEB-UI-DELETE-FEATURE.md  WEB-UI-FEATURES.md  architecture-vue-frontend.md  architecture.md  bmm-workflow-status.yaml  epics.md  implementation-checklist.md  microservice-architecture-v2.md  multi-modbus-guide.md  pm-summary-vue-initiative.md  prd.md  scaling-100-slaves.md  sprint-change-proposal-2025-12-08.md  vue-quick-start.md
docs/examples/: default.toml.example  modbus_devices.csv.example
docs/sprint-artifacts/: 0-1-monorepo-polyglot-workspace-initialization.md  0-2-infrastructure-as-code-docker-compose-nats.md  0-3-core-library-protobuf-schema-setup.md  0-4-ci-cd-pipeline-foundation.md  1-1-auth-service-jwt-implementation.md  1-3-rbac-service-accounts.md  (+26 more)
ops/: DOCKER_GUIDE.md  docker-compose.yml  nats.conf  setup_streams.sh
scripts/: add_modbus_ingestor.sh  gen-go-proto.sh  gen-py-proto.sh  local-ci.sh  test_api.sh
services/engine/: Cargo.toml  Dockerfile  test_engine.py
services/engine/src/: downsample.rs  export.rs  ingest.rs  main.rs  metadata.rs  query.rs  query_rest.rs
services/engine/src/storage/: compression.rs  mod.rs  rocksdb.rs
services/engine/src/storage/tiered/: job.rs  mod.rs  policy.rs  s3.rs
services/ingestor/: Cargo.toml  Dockerfile  TEST_GUIDE.md  monitor_nats.sh  start_ingestor.sh  test_ingestor.py
services/ingestor/src/: buffer.rs  config.rs  engine.rs  main.rs  modbus.rs  publisher.rs
viz/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
vizDocs/: brief.md  prd.md
(+134 files in other folders)
