[workspace]
resolver = "2"
members = [
    "crates/*",
    "services/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Historian Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
