[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
historian-core = { path = "../../crates/historian-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rocksdb = "0.22"
async-nats = "0.37"
prost = "0.13"
tonic = "0.12"
tsz = "0.1.4"
dashmap = "6.0"
futures = "0.3"
rust-s3 = "0.33"
async-trait = "0.1"
tokio-stream = "0.1"
lttb = "0.2"
axum = "0.8.7"
csv = "1.4.0"
tower-http = { version = "0.6.7", features = ["cors"] }
tokio-util = { version = "0.7.17", features = ["io"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
